[package]
name = "xflags-macros"
version = "0.2.0"
description = "Private implementation details of xflags."
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/xflags"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"

[dev-dependencies]
expect-test = "1"
xflags = { path = "../" }
