[package]
name = "xflags-macros"
version = "0.2.4"
description = "Private implementation details of xflags."
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/xflags"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dev-dependencies]
proc-macro2 = "1"
expect-test = "1"
xflags = { path = "../" }
